// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpacedGroup should match snapshot 1`] = `
<span
  className="spaced-group"
/>
`;

exports[`SpacedGroup should take regular element attributes 1`] = `
<span
  className="spaced-group my-class"
/>
`;
